fixed spacing in login and home page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
+    justify-content: space-evenly;
   }
   
   aside {
